--- a/nb_dev_python/python_pyomo_getting_started_1.ipynb
+++ b/nb_dev_python/python_pyomo_getting_started_1.ipynb
@@ -19,6 +19,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See also these excellent tutorials that details how to install Pyomo and several solvers (GLPK, COIN-OR CBC, COIN-OR Ipopt, ...):\n",
+    "- https://nbviewer.jupyter.org/github/jckantor/ND-Pyomo-Cookbook/blob/master/notebooks/01.01-Installing-Pyomo.ipynb\n",
+    "- https://nbviewer.jupyter.org/github/jckantor/ND-Pyomo-Cookbook/blob/master/notebooks/01.02-Running-Pyomo-on-Google-Colab.ipynb\n",
+    "- https://nbviewer.jupyter.org/github/jckantor/ND-Pyomo-Cookbook/blob/master/notebooks/01.04-Cross-Platform-Installation-of-Pyomo-and-Solvers.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -49,7 +59,7 @@
     "model.const_1 = Constraint(expr=model.x >= 5)\n",
     "\n",
     "# @tail:\n",
-    "opt = SolverFactory('glpk')\n",
+    "opt = SolverFactory('glpk')  # \"glpk\" or \"cbc\"\n",
     "\n",
     "res = opt.solve(model)    # solves and updates instance\n",
     "\n",
@@ -101,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ConcreteModel(name=\"Getting started\", )\n",
+    "model = ConcreteModel(name=\"Getting started\")\n",
     "\n",
     "model.x1 = Var(within=NonNegativeReals)\n",
     "model.x2 = Var(within=NonNegativeReals)\n",
@@ -113,7 +123,7 @@
     "model.ineq_const_3 = Constraint(expr=3. * model.x1 + 4. * model.x2 <= 360)\n",
     "\n",
     "# @tail:\n",
-    "opt = SolverFactory('glpk')\n",
+    "opt = SolverFactory('glpk')  # \"glpk\" or \"cbc\"\n",
     "\n",
     "results = opt.solve(model)    # solves and updates instance\n",
     "\n",
@@ -142,9 +152,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
