--- a/nb_dev_python/python_pyomo_getting_started_0_installation_instructions_pyomo_and_solvers.ipynb
+++ b/nb_dev_python/python_pyomo_getting_started_0_installation_instructions_pyomo_and_solvers.ipynb
@@ -2,7 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta",
+     "draft"
+    ]
+   },
    "source": [
     "# Pyomo - Installation instructions"
    ]
@@ -11,7 +16,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pyomo + solvers installation"
+    "Author: Jérémie Decock (2019)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Install Pyomo and COIN-OR open source solvers on Windows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pyomo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pyomo installation (see http://www.pyomo.org/installation):\n",
+    "\n",
+    "```\n",
+    "pip install pyomo\n",
+    "```\n",
+    "\n",
+    "Alternatively, one can install Pyomo with Anaconda:\n",
+    "\n",
+    "```\n",
+    "conda install -c conda-forge pyomo\n",
+    "conda install -c conda-forge pyomo.extras\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coin-OR solvers\n",
+    "\n",
+    "#### With AMPL binaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AMPL provides a compiled version of Coin-OR solvers :\n",
+    "\n",
+    "- https://ampl.com/dl/open/cbc/cbc-win64.zip\n",
+    "- https://ampl.com/dl/open/ipopt/ipopt-win64.zip\n",
+    "- https://ampl.com/dl/open/bonmin/bonmin-win64.zip\n",
+    "- https://ampl.com/dl/open/couenne/couenne-win64.zip\n",
+    "- https://ampl.com/dl/open/gecode/gecode-win64.zip\n",
+    "- https://ampl.com/dl/open/gecode/jacop-win64.zip\n",
+    "\n",
+    "To install them, one can apply the following procedure:\n",
+    "\n",
+    "1. make the `C:\\coinor` directory\n",
+    "2. download the above .zip files and unzip them\n",
+    "3. copy `.exe`, `.dll`, `.ampl` and `.jar` files in `C:\\coinor` in order to obtain this:\n",
+    "\n",
+    "```\n",
+    "C:\\coinor\\ampljacop.jar\n",
+    "C:\\coinor\\bonmin.exe\n",
+    "C:\\coinor\\cbc.exe\n",
+    "C:\\coinor\\couenne.exe\n",
+    "C:\\coinor\\gecode.ampl\n",
+    "C:\\coinor\\gecode.exe\n",
+    "C:\\coinor\\ipopt.exe\n",
+    "C:\\coinor\\jacop-4.1.0.jar\n",
+    "C:\\coinor\\jacop.exe\n",
+    "C:\\coinor\\libipoptfort.dll\n",
+    "```\n",
+    "\n",
+    "4. add `C:\\coinor` to the `PATH` [environment variable](https://superuser.com/questions/284342/what-are-path-and-other-environment-variables-and-how-can-i-set-or-use-them):\n",
+    "\n",
+    "  - Open the \"Run Command\" dialog with this Keyboard shortcut: `Win + R`\n",
+    "  - Type \"sysdm.cpl\" or \"SystemPropertiesAdvanced\"\n",
+    "  - [In \"Advanced\", click on \"Environment Variables...\"](https://i.stack.imgur.com/ZeExG.png)\n",
+    "  - [Select \"Path\" in the \"User variables\" list then click on \"Edit...\"](https://winaero.com/blog/wp-content/uploads/2016/09/Windows-10-environment-variables.png)\n",
+    "  - Add \"C:\\coinor\" to the end of the list then click on \"OK\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### With Anaconda\n",
+    "\n",
+    "Alternatively, one can install [CBC](https://anaconda.org/conda-forge/coincbc) and [ipopt](https://anaconda.org/conda-forge/ipopt) directly with Anaconda:\n",
+    "\n",
+    "```\n",
+    "conda install -c conda-forge coincbc\n",
+    "conda install -c conda-forge ipopt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GLPK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To install [GLPK with Anaconda](https://anaconda.org/conda-forge/glpk), type:\n",
+    "\n",
+    "```\n",
+    "conda install -c conda-forge glpk\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Install Pyomo and COIN-OR open source solvers on Linux"
    ]
   },
   {
@@ -210,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
