--- a/nb_dev_python/python_scipy_interpolate_en.ipynb
+++ b/nb_dev_python/python_scipy_interpolate_en.ipynb
@@ -67,6 +67,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following examples, we interpolate $f(x) \\mapsto \\sin(x)$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -84,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear interpollation"
+    "### Linear interpolation"
    ]
   },
   {
@@ -101,7 +108,7 @@
     "y2 = f(x2)\n",
     "\n",
     "plt.plot(x, y, \"o:b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpolated\")\n",
     "plt.legend();"
    ]
   },
@@ -109,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B-Splines"
+    "### B-Splines interpolation"
    ]
   },
   {
@@ -133,7 +140,7 @@
     "y2 = scipy.interpolate.splev(x2, spl)\n",
     "\n",
     "plt.plot(x, y, \"o:b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpolated\")\n",
     "plt.legend();"
    ]
   },
@@ -151,7 +158,7 @@
     "y2 = scipy.interpolate.splev(x2, spl)\n",
     "\n",
     "plt.plot(x, y, \"o:b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpolated\")\n",
     "plt.legend();"
    ]
   },
@@ -176,7 +183,7 @@
     "y2 = f(x2)\n",
     "\n",
     "plt.plot(x, y, \"o:b\", label=\"original\")\n",
-    "plt.plot(x2, y2, \".-r\", label=\"interpollated\")\n",
+    "plt.plot(x2, y2, \".-r\", label=\"interpolated\")\n",
     "plt.legend();"
    ]
   },
@@ -185,6 +192,13 @@
    "metadata": {},
    "source": [
     "## Interpolate 2D functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following examples, we interpolate $f(x, y) \\mapsto \\sin(x) + \\sin(y)$"
    ]
   },
   {
@@ -224,6 +238,7 @@
     "                       cstride=1,\n",
     "                       shade=False)\n",
     "\n",
+    "plt.title(\"Original data\")\n",
     "plt.show();"
    ]
   },
@@ -231,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear interpollation"
+    "### Linear interpolation"
    ]
   },
   {
@@ -445,6 +460,181 @@
     "                       rstride=1,\n",
     "                       cstride=1,\n",
     "                       shade=False)\n",
+    "\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpolate unstructured D-dimensional data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Documentation: https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.griddata.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scipy official documentation example\n",
+    "\n",
+    "Example taken from https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.griddata.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(x, y):\n",
+    "    return x*(1-x)*np.cos(4*np.pi*x) * np.sin(4*np.pi*y**2)**2\n",
+    "\n",
+    "grid_x, grid_y = np.mgrid[0:1:100j, 0:1:200j]\n",
+    "\n",
+    "points = np.random.rand(1000, 2)\n",
+    "values = func(points[:,0], points[:,1])\n",
+    "\n",
+    "grid_z0 = scipy.interpolate.griddata(points, values, (grid_x, grid_y), method='nearest')\n",
+    "grid_z1 = scipy.interpolate.griddata(points, values, (grid_x, grid_y), method='linear')\n",
+    "grid_z2 = scipy.interpolate.griddata(points, values, (grid_x, grid_y), method='cubic')\n",
+    "\n",
+    "plt.subplot(221)\n",
+    "plt.imshow(func(grid_x, grid_y).T, extent=(0,1,0,1), origin='lower')\n",
+    "plt.plot(points[:,0], points[:,1], 'k.', ms=1)\n",
+    "plt.title('Original')\n",
+    "plt.subplot(222)\n",
+    "plt.imshow(grid_z0.T, extent=(0,1,0,1), origin='lower')\n",
+    "plt.title('Nearest')\n",
+    "plt.subplot(223)\n",
+    "plt.imshow(grid_z1.T, extent=(0,1,0,1), origin='lower')\n",
+    "plt.title('Linear')\n",
+    "plt.subplot(224)\n",
+    "plt.imshow(grid_z2.T, extent=(0,1,0,1), origin='lower')\n",
+    "plt.title('Cubic')\n",
+    "plt.gcf().set_size_inches(6, 6)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Callable version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InterpoledGridData:\n",
+    "    \n",
+    "    def __init__(self, x, y, z, interpolation_method='linear', fill_value=float('nan')):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.z = z\n",
+    "        self.fill_value = fill_value\n",
+    "        self.interpolation_method = interpolation_method\n",
+    "    \n",
+    "    def __call__(self, x1_mesh, x2_mesh):\n",
+    "        z = scipy.interpolate.griddata(points = (self.x, self.y),\n",
+    "                                       values = self.z,\n",
+    "                                       xi = (x1_mesh, x2_mesh),\n",
+    "                                       fill_value=self.fill_value,\n",
+    "                                       method = self.interpolation_method)     # Let 'f' raise an exception when the requested point is outside the range defined by x and y\n",
+    "        \n",
+    "        if z.ndim == 0:\n",
+    "            z = float(z)\n",
+    "            \n",
+    "        return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.random.rand(1000)\n",
+    "y = np.random.rand(1000)\n",
+    "z = func(x, y)\n",
+    "\n",
+    "f = InterpoledGridData(x, y, z, interpolation_method='cubic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(0.5, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_hd = np.linspace(x.min(),\n",
+    "                   x.max(),\n",
+    "                   100)\n",
+    "y_hd = np.linspace(y.min(),\n",
+    "                   y.max(),\n",
+    "                   100)\n",
+    "\n",
+    "xx_hd, yy_hd = np.meshgrid(x_hd, y_hd)\n",
+    "\n",
+    "z_hd = f(xx_hd, yy_hd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot data\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "ax = axes3d.Axes3D(fig, azim=150, elev=30)\n",
+    "\n",
+    "surf = ax.plot_surface(xx_hd,\n",
+    "                       yy_hd,\n",
+    "                       z_hd,\n",
+    "                       cmap='gnuplot2',\n",
+    "                       rstride=1,\n",
+    "                       cstride=1,\n",
+    "                       vmin=np.nanmin(z_hd),\n",
+    "                       vmax=np.nanmax(z_hd),\n",
+    "                       shade=False)\n",
+    "\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "\n",
+    "im = ax.pcolormesh(xx_hd, yy_hd, z_hd,\n",
+    "                   #shading='gouraud',\n",
+    "                   cmap='gnuplot2')\n",
+    "\n",
+    "plt.colorbar(im, ax=ax)\n",
     "\n",
     "plt.show();"
    ]
