--- a/nb_dev_python/python_scipy_interpolate_en.ipynb
+++ b/nb_dev_python/python_scipy_interpolate_en.ipynb
@@ -550,7 +550,7 @@
     "                                       values = self.z,\n",
     "                                       xi = (x1_mesh, x2_mesh),\n",
     "                                       fill_value=self.fill_value,\n",
-    "                                       method = self.interpolation_method)     # Let 'f' raise an exception when the requested point is outside the range defined by x and y\n",
+    "                                       method = self.interpolation_method)\n",
     "        \n",
     "        if z.ndim == 0:\n",
     "            z = float(z)\n",
