--- a/nb_dev_python/python_pyomo_getting_started_0_installation_instructions_pyomo_and_solvers.ipynb
+++ b/nb_dev_python/python_pyomo_getting_started_0_installation_instructions_pyomo_and_solvers.ipynb
@@ -41,9 +41,18 @@
     "\n",
     "```\n",
     "pip install pyomo\n",
-    "```\n",
-    "\n",
-    "Alternatively, one can install Pyomo with Anaconda:\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "Alternatively, one can install Pyomo with Anaconda (not recommended):\n",
     "\n",
     "```\n",
     "conda install -c conda-forge pyomo\n",
@@ -101,9 +110,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
-    "#### With Anaconda\n",
+    "#### With Anaconda (not recommended)\n",
     "\n",
     "Alternatively, one can install [CBC](https://anaconda.org/conda-forge/coincbc) and [ipopt](https://anaconda.org/conda-forge/ipopt) directly with Anaconda:\n",
     "\n",
@@ -142,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pyomo"
+    "### Install Pyomo"
    ]
   },
   {
@@ -153,9 +166,100 @@
     "\n",
     "```\n",
     "pip install pyomo\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install COIN-OR open source solvers with AMPL binaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AMPL provides a compiled version of Coin-OR solvers:\n",
     "\n",
-    "or with Anaconda:\n",
+    "- https://ampl.com/dl/open/cbc/cbc-linux64.zip\n",
+    "- https://ampl.com/dl/open/ipopt/ipopt-linux64.zip\n",
+    "- https://ampl.com/dl/open/bonmin/bonmin-linux64.zip\n",
+    "- https://ampl.com/dl/open/couenne/couenne-linux64.zip\n",
+    "- https://ampl.com/dl/open/gecode/gecode-linux64.zip\n",
+    "- https://ampl.com/dl/open/jacop/jacop-linux64.zip\n",
+    "\n",
+    "To install them, one can apply the following procedure:\n",
+    "\n",
+    "1. make the `~/bin/coinor` directory\n",
+    "```\n",
+    "mkdir -p ~/bin/coinor\n",
+    "```\n",
+    "2. download the above .zip files and unzip them\n",
+    "```\n",
+    "cd ~/bin/coinor\n",
+    "wget -N -q \"https://ampl.com/dl/open/cbc/cbc-linux64.zip\"\n",
+    "wget -N -q \"https://ampl.com/dl/open/ipopt/ipopt-linux64.zip\"\n",
+    "wget -N -q \"https://ampl.com/dl/open/bonmin/bonmin-linux64.zip\"\n",
+    "wget -N -q \"https://ampl.com/dl/open/couenne/couenne-linux64.zip\"\n",
+    "wget -N -q \"https://ampl.com/dl/open/gecode/gecode-linux64.zip\"\n",
+    "wget -N -q \"https://ampl.com/dl/open/gecode/jacop-linux64.zip\"\n",
+    "unzip -o -q *.zip\n",
+    "cd\n",
+    "```\n",
+    "3. add `~/bin/coinor` to the `PATH` environment variable:\n",
+    "```\n",
+    "echo \"export PATH=\\$PATH:\\\"$HOME/bin/coinor\\\"\" >> ~/.bashrc\n",
+    "source ~/.bashrc\n",
+    "```\n",
+    "4. check the installation procedure:\n",
+    "```\n",
+    "ipopt -v\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative method for Coin-OR CBC (on Debian like distributions only):\n",
+    "\n",
+    "```\n",
+    "apt-get install -y -qq coinor-cbc\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install GLPK (on Debian like distributions only)\n",
+    "\n",
+    "```\n",
+    "apt-get install -y -qq glpk-utils\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "### With Anaconda (not recommended)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "Pyomo:\n",
     "\n",
     "```\n",
     "conda install -c conda-forge pyomo\n",
@@ -165,22 +269,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
-    "### GLPK"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "GLPK installation:\n",
-    "\n",
-    "```\n",
-    "apt-get install -y -qq glpk-utils\n",
-    "```\n",
-    "\n",
-    "or with Anaconda (https://anaconda.org/conda-forge/glpk):\n",
+    "[GLPK](https://anaconda.org/conda-forge/glpk):\n",
     "\n",
     "```\n",
     "conda install -c conda-forge glpk\n",
@@ -189,29 +284,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
-    "### Coin-OR CBC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Coin-OR CBC installation:\n",
-    "\n",
-    "```\n",
-    "apt-get install -y -qq coinor-cbc\n",
-    "```\n",
-    "\n",
-    "or using AMPL binaries:\n",
-    "\n",
-    "```\n",
-    "wget -N -q \"https://ampl.com/dl/open/cbc/cbc-linux64.zip\"\n",
-    "unzip -o -q cbc-linux64\n",
-    "```\n",
-    "\n",
-    "or with Anaconda (https://anaconda.org/conda-forge/coincbc):\n",
+    "[CBC](https://anaconda.org/conda-forge/coincbc):\n",
     "\n",
     "```\n",
     "conda install -c conda-forge coincbc\n",
@@ -220,23 +299,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
-    "### Coin-OR Ipopt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Coin-OR Ipopt installation (AMPL binaries):\n",
-    "\n",
-    "```\n",
-    "wget -N -q \"https://ampl.com/dl/open/ipopt/ipopt-linux64.zip\"\n",
-    "unzip -o -q ipopt-linux64\n",
-    "```\n",
-    "\n",
-    "or with Anaconda (https://anaconda.org/conda-forge/ipopt):\n",
+    "[Ipopt](https://anaconda.org/conda-forge/ipopt):\n",
     "\n",
     "```\n",
     "conda install -c conda-forge ipopt\n",
@@ -247,64 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coin-OR Bonmin"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Coin-OR Bonmin installation (AMPL binaries):\n",
-    "\n",
-    "```\n",
-    "wget -N -q \"https://ampl.com/dl/open/bonmin/bonmin-linux64.zip\"\n",
-    "unzip -o -q bonmin-linux64\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Coin-OR Couenne"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Coin-OR Couenne installation (AMPL binaries):\n",
-    "\n",
-    "```\n",
-    "wget -N -q \"https://ampl.com/dl/open/couenne/couenne-linux64.zip\"\n",
-    "unzip -o -q couenne-linux64\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Coin-OR Gecode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Coin-OR Gecode installation (AMPL binaries):\n",
-    "\n",
-    "```\n",
-    "wget -N -q \"https://ampl.com/dl/open/gecode/gecode-linux64.zip\"\n",
-    "unzip -o -q gecode-linux64\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### More information"
+    "## More information"
    ]
   },
   {
