Fix some mistakes.

--- a/nb_dev_python/python_pyomo_getting_started_0_installation_instructions_pyomo_and_solvers.ipynb
+++ b/nb_dev_python/python_pyomo_getting_started_0_installation_instructions_pyomo_and_solvers.ipynb
@@ -203,8 +203,13 @@
     "wget -N -q \"https://ampl.com/dl/open/bonmin/bonmin-linux64.zip\"\n",
     "wget -N -q \"https://ampl.com/dl/open/couenne/couenne-linux64.zip\"\n",
     "wget -N -q \"https://ampl.com/dl/open/gecode/gecode-linux64.zip\"\n",
-    "wget -N -q \"https://ampl.com/dl/open/gecode/jacop-linux64.zip\"\n",
-    "unzip -o -q *.zip\n",
+    "wget -N -q \"https://ampl.com/dl/open/jacop/jacop-linux64.zip\"\n",
+    "unzip -o -q cbc-linux64\n",
+    "unzip -o -q ipopt-linux64\n",
+    "unzip -o -q bonmin-linux64\n",
+    "unzip -o -q couenne-linux64\n",
+    "unzip -o -q gecode-linux64\n",
+    "unzip -o -q jacop-linux64\n",
     "cd\n",
     "```\n",
     "3. add `~/bin/coinor` to the `PATH` environment variable:\n",
