--- a/nb_dev_python/stable_baselines_PPO_env_point_mass.ipynb
+++ b/nb_dev_python/stable_baselines_PPO_env_point_mass.ipynb
@@ -55,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uncomment the following cells if you use Google Colab"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
