--- a/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
+++ b/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
@@ -178,6 +178,225 @@
     }
    },
    "source": [
+    "## Plotly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\"The plotly Python library is an interactive, open-source plotting library that supports over 40 unique chart types covering a wide range of statistical, financial, geographic, scientific, and 3-dimensional use-cases.\n",
+    "\n",
+    "Built on top of the Plotly JavaScript library (plotly.js), plotly enables Python users to create beautiful interactive web-based visualizations that can be displayed in Jupyter notebooks, saved to standalone HTML files\"\n",
+    "\n",
+    "**Installation:**\n",
+    "\n",
+    "Plotly may be installed using pip:\n",
+    "\n",
+    "```\n",
+    "pip install plotly\n",
+    "```\n",
+    "\n",
+    "**Documentation:** https://plotly.com/python/getting-started/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "df = px.data.iris()\n",
+    "fig = px.scatter(df, x=\"sepal_width\", y=\"sepal_length\", color=\"species\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "df = px.data.iris()\n",
+    "fig = px.scatter_matrix(df, dimensions=[\"sepal_width\", \"sepal_length\", \"petal_width\", \"petal_length\"], color=\"species\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "df = px.data.gapminder()\n",
+    "fig = px.scatter(df, x=\"gdpPercap\", y=\"lifeExp\", animation_frame=\"year\", animation_group=\"country\",\n",
+    "           size=\"pop\", color=\"continent\", hover_name=\"country\", facet_col=\"continent\",\n",
+    "           log_x=True, size_max=45, range_x=[100,100000], range_y=[25,90])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "df = px.data.carshare()\n",
+    "fig = px.scatter_mapbox(df, lat=\"centroid_lat\", lon=\"centroid_lon\", color=\"peak_hour\", size=\"car_hours\",\n",
+    "                  color_continuous_scale=px.colors.cyclical.IceFire, size_max=15, zoom=10,\n",
+    "                  mapbox_style=\"carto-positron\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# C.f. https://plotly.com/python/time-series/\n",
+    "\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "#pio.renderers.default = \"browser\"\n",
+    "\n",
+    "df = pd.read_csv(\"pvgis.csv\")\n",
+    "df['time'] = pd.date_range(\"2005-01-01\", periods=len(df), freq='1h')\n",
+    "\n",
+    "fig = px.line(df,\n",
+    "              x='time',\n",
+    "              y=[\n",
+    "                  #'direct_in-plane_irradiance',\n",
+    "                  #'diffuse_in-plane_irradiance',\n",
+    "                  #'reflected_in-plane_irradiance',\n",
+    "                  #'sun_height',\n",
+    "                  'temperature',\n",
+    "                  #'wind'\n",
+    "              ],\n",
+    "              width=800,\n",
+    "              height=400,\n",
+    "              title='Ratios')\n",
+    "\n",
+    "fig.update_xaxes(\n",
+    "    rangeslider_visible=True,\n",
+    "    rangeselector=dict(\n",
+    "        buttons=list([\n",
+    "            dict(count=1, label=\"1d\", step=\"day\", stepmode=\"backward\"),\n",
+    "            dict(count=7, label=\"1w\", step=\"day\", stepmode=\"backward\"),\n",
+    "            dict(count=1, label=\"1m\", step=\"month\", stepmode=\"backward\"),\n",
+    "            dict(count=1, label=\"1y\", step=\"year\", stepmode=\"backward\"),\n",
+    "            dict(step=\"all\")\n",
+    "        ])\n",
+    "    )\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "https://plotly.com/python/time-series/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Bokeh\n",
+    "\n",
+    "\"Bokeh is a Python library for creating interactive visualizations for modern web browsers. It helps you build beautiful graphics, ranging from simple plots to complex dashboards with streaming datasets. With Bokeh, you can create JavaScript-powered visualizations without writing any JavaScript yourself.\"\n",
+    "\n",
+    "**Installation:**\n",
+    "\n",
+    "```\n",
+    "pip install bokeh\n",
+    "```\n",
+    "\n",
+    "**Documentation:** https://bokeh.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "https://demo.bokeh.org/sliders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "https://demo.bokeh.org/selection_histogram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "https://demo.bokeh.org/stocks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Widgets in Jupyter with ipywidget"
    ]
   },
@@ -240,6 +459,31 @@
     "\n",
     "slider = IntSlider(min=1, max=10)  # make the widget\n",
     "display(slider)                    # display it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link the widget to a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets\n",
+    "\n",
+    "wg1 = ipywidgets.IntSlider(description='x')\n",
+    "\n",
+    "def f(x):\n",
+    "    print(x**2)\n",
+    "\n",
+    "out = ipywidgets.interactive_output(f, {'x': wg1})\n",
+    "\n",
+    "ipywidgets.HBox([ipywidgets.VBox([wg1]), out])"
    ]
   },
   {
@@ -309,6 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import interact\n",
+    "\n",
     "interact(f, x=5);"
    ]
   },
@@ -644,6 +890,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1301,6 +1548,7 @@
    "source": [
     "import statsmodels.api as sm\n",
     "\n",
+    "# https://www.statsmodels.org/devel/datasets/index.html\n",
     "data = sm.datasets.elnino.load_pandas()\n",
     "df = data.data\n",
     "df.index = df.YEAR\n",
@@ -1333,32 +1581,137 @@
     }
    },
    "source": [
-    "#### Understand algorithms: evolutionary algorithms"
+    "#### Understand algorithms: neural networks"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
    "source": [
-    "TODO... "
+    "# Activation functions ########################################################\n",
+    "\n",
+    "def identity(x):\n",
+    "    return x\n",
+    "\n",
+    "def tanh(x):\n",
+    "    return np.tanh(x)\n",
+    "\n",
+    "def relu(x):\n",
+    "    x_and_zeros = np.array([x, np.zeros(x.shape)])\n",
+    "    return np.max(x_and_zeros, axis=0)\n",
+    "\n",
+    "# Dense Multi-Layer Neural Network ############################################\n",
+    "\n",
+    "IN_SIZE = 2\n",
+    "OUT_SIZE = 1\n",
+    "H_SIZE = 4   # H_SIZE = number of neurons on the hidden layer\n",
+    "\n",
+    "# Set the neural network activation functions (one function per layer)\n",
+    "activation_functions = (relu, tanh)\n",
+    "\n",
+    "# Make a neural network with 1 hidden layer of `H_SIZE` units\n",
+    "weights = (np.random.random(size=[IN_SIZE + 1, H_SIZE]),\n",
+    "           np.random.random(size=[H_SIZE + 1, OUT_SIZE]))\n",
+    "\n",
+    "def feed_forward(inputs, weights, activation_functions, verbose=False):\n",
+    "\n",
+    "    x = inputs.copy()\n",
+    "    for layer_weights, layer_activation_fn in zip(weights, activation_functions):\n",
+    "\n",
+    "        y = np.dot(x, layer_weights[1:])\n",
+    "        y += layer_weights[0]\n",
+    "        \n",
+    "        layer_output = layer_activation_fn(y)\n",
+    "\n",
+    "        if verbose:\n",
+    "            print(\"x\", x)\n",
+    "            print(\"bias\", layer_weights[0])\n",
+    "            print(\"W\", layer_weights[1:])\n",
+    "            print(\"y\", y)\n",
+    "            print(\"z\", layer_output)\n",
+    "\n",
+    "        x = layer_output\n",
+    "\n",
+    "    return layer_output"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
    "source": [
-    "#### Understand algorithms: neural networks"
+    "xmin, xmax = -10., 10.\n",
+    "res = 100\n",
+    "\n",
+    "def plot(w11, w12, w13, w14, w21, w22, w23, w24, w31, w32, w33, w34, wo1, wo2, wo3, wo4, wo5):\n",
+    "\n",
+    "    weights = (np.array([[w11, w12, w13, w14],\n",
+    "                      [w21, w22, w23, w24],\n",
+    "                      [w31, w32, w33, w34]]),\n",
+    "               np.array([[wo1],\n",
+    "                      [wo2],\n",
+    "                      [wo3],\n",
+    "                      [wo4],\n",
+    "                      [wo5]]))\n",
+    "    \n",
+    "    x1_space = np.linspace(xmin, xmax, res)\n",
+    "    x2_space = np.linspace(xmin, xmax, res)\n",
+    "\n",
+    "    x1_mesh, x2_mesh = np.meshgrid(x1_space, x2_space)\n",
+    "\n",
+    "    z = [feed_forward(inputs=[x, y],\n",
+    "                      weights=weights,\n",
+    "                      activation_functions=activation_functions) for x, y in zip(x1_mesh.ravel(), x2_mesh.ravel())]\n",
+    "\n",
+    "    zz = np.array(z).reshape(x1_mesh.shape)\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "\n",
+    "    im = ax.pcolormesh(x1_mesh, x2_mesh, zz,\n",
+    "                       shading='gouraud',\n",
+    "                       #norm=matplotlib.colors.LogNorm(), # TODO\n",
+    "                       cmap='magma') # 'jet' # 'gnuplot2'\n",
+    "\n",
+    "    plt.colorbar(im, ax=ax)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
    "source": [
-    "TODO... "
+    "from ipywidgets import GridspecLayout, FloatSlider, Layout\n",
+    "import random\n",
+    "\n",
+    "grid = GridspecLayout(5, 4)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    for j in range(4):\n",
+    "        grid[i, j] = FloatSlider(value=random.random(), min=-5., max=5., step=0.1, description=\"w{}{}\".format(i, j), layout=Layout(width='75%'))\n",
+    "\n",
+    "out = ipywidgets.interactive_output(plot, {'w11': grid[0, 0], 'w12': grid[1, 0], 'w13': grid[2, 0], 'w14': grid[3, 0],\n",
+    "                                           'w21': grid[0, 1], 'w22': grid[1, 1], 'w23': grid[2, 1], 'w24': grid[3, 1],\n",
+    "                                           'w31': grid[0, 2], 'w32': grid[1, 2], 'w33': grid[2, 2], 'w34': grid[3, 2],\n",
+    "                                           'wo1': grid[0, 3], 'wo2': grid[1, 3], 'wo3': grid[2, 3], 'wo4': grid[3, 3], 'wo5': grid[4, 3]})\n",
+    "\n",
+    "#display(grid, out)\n",
+    "ipywidgets.VBox([grid, out])"
    ]
   }
  ],
