--- a/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
+++ b/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
@@ -99,8 +99,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
-    "import matplotlib.cm as cm\n",
-    "import seaborn as sns"
+    "import matplotlib.cm as cm"
    ]
   },
   {
@@ -292,18 +291,13 @@
     "import plotly.io as pio\n",
     "#pio.renderers.default = \"browser\"\n",
     "\n",
-    "df = pd.read_csv(\"pvgis.csv\")\n",
+    "df = pd.read_csv(\"pvgis.csv.tar.gz\")\n",
     "df['time'] = pd.date_range(\"2005-01-01\", periods=len(df), freq='1h')\n",
     "\n",
     "fig = px.line(df,\n",
     "              x='time',\n",
     "              y=[\n",
-    "                  #'direct_in-plane_irradiance',\n",
-    "                  #'diffuse_in-plane_irradiance',\n",
-    "                  #'reflected_in-plane_irradiance',\n",
-    "                  #'sun_height',\n",
     "                  'temperature',\n",
-    "                  #'wind'\n",
     "              ],\n",
     "              width=800,\n",
     "              height=400,\n",
