--- a/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
+++ b/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
@@ -470,14 +470,14 @@
    "source": [
     "import ipywidgets\n",
     "\n",
-    "wg1 = ipywidgets.IntSlider(description='x')\n",
+    "slider = IntSlider(min=1, max=10, description='x')  # make the widget\n",
     "\n",
     "def f(x):\n",
     "    print(x**2)\n",
     "\n",
-    "out = ipywidgets.interactive_output(f, {'x': wg1})\n",
+    "out = ipywidgets.interactive_output(f, {'x': slider})\n",
     "\n",
-    "ipywidgets.HBox([ipywidgets.VBox([wg1]), out])"
+    "ipywidgets.HBox([ipywidgets.VBox([slider]), out])"
    ]
   },
   {
