--- a/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
+++ b/nb_dev_jupyter/notebook_ipywidgets_en.ipynb
@@ -1609,7 +1609,7 @@
     "# Set the neural network activation functions (one function per layer)\n",
     "activation_functions = (relu, tanh)\n",
     "\n",
-    "# Make a neural network with 1 hidden layer of `H_SIZE` units\n",
+    "# Make a neural network with 2 hidden layers of `H_SIZE` units\n",
     "weights = (np.random.random(size=[IN_SIZE + 1, H_SIZE]),\n",
     "           np.random.random(size=[H_SIZE + 1, OUT_SIZE]))\n",
     "\n",
